--- a/SchaffschNie.cabal
+++ b/SchaffschNie.cabal
@@ -19,19 +19,21 @@ executable SchaffschNie
   other-modules:       GameTypes
                        , GameParser
                        , GameReader
+                       , Output.Graphics
+                       , Output.Shapes
   other-extensions:    Arrows
   build-depends:       base >=4.6 && <5.0
-                       , data-default
-                       , split >= 0.2
-                       -- , Yampa >=0.10
-                       -- , colour >=2.0
-                       -- , text
-                       -- , sdl2 >=2.0
-                       -- , sdl2-ttf
-                       -- , linear
+                       , data-default >=0.5
+                       , split >=0.2
+                       , sdl2 >=2.1
+                       , sdl2-ttf >=0.2
+                       , text >=1.2
+                       , StateVar >=1.1
+                       , colour >=2.3
+                       , linear >=1.20
                        -- , vector
                        -- , random
-                       -- , StateVar
                        -- , time
+                       , Yampa >=0.10
   hs-source-dirs:      src
   default-language:    Haskell2010
