--- a/SchaffschNie.cabal
+++ b/SchaffschNie.cabal
@@ -15,12 +15,6 @@ cabal-version:       >=1.22
 
 executable SchaffschNie
   main-is:             Main.hs
-
---  other-modules:       GameTypes
---                       , GameParser
---                       , GameReader
---                       , Output.Graphics
---                       , Output.Shapes
   other-extensions:    Arrows
   build-depends:       base >=4.6 && <5.0
                        , data-default >=0.5
@@ -31,9 +25,27 @@ executable SchaffschNie
                        , StateVar >=1.1
                        , colour >=2.3
                        , linear >=1.20
-                       -- , vector
-                       -- , random
-                       -- , time
+                       , Yampa >=0.10
+  hs-source-dirs:      src
+  default-language:    Haskell2010
+
+executable SchaffschNie-Prof
+  main-is:             Main.hs
+  ghc-options:
+    -O2
+    -threaded
+    -fprof-auto
+    "-with-rtsopts=-N -p -s -hy -i0.1"
+  other-extensions:    Arrows
+  build-depends:       base >=4.6 && <5.0
+                       , data-default >=0.5
+                       , split >=0.2
+                       , sdl2 >=2.1
+                       , sdl2-ttf >=0.2
+                       , text >=1.2
+                       , StateVar >=1.1
+                       , colour >=2.3
+                       , linear >=1.20
                        , Yampa >=0.10
   hs-source-dirs:      src
   default-language:    Haskell2010
