--- a/SchaffschNie.cabal
+++ b/SchaffschNie.cabal
@@ -26,6 +26,8 @@ executable SchaffschNie
                        , colour >=2.3
                        , linear >=1.20
                        , Yampa >=0.10
+                       , containers >= 0.5
+                       , directory >= 1.2
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -47,5 +49,7 @@ executable SchaffschNie-Prof
                        , colour >=2.3
                        , linear >=1.20
                        , Yampa >=0.10
+                       , containers >= 0.5
+                       , directory >= 1.2
   hs-source-dirs:      src
   default-language:    Haskell2010
