--- a/SchaffschNie.cabal
+++ b/SchaffschNie.cabal
@@ -28,28 +28,30 @@ executable SchaffschNie
                        , Yampa >=0.10
                        , containers >= 0.5
                        , directory >= 1.2
+                       , filepath >= 1.4
   hs-source-dirs:      src
   default-language:    Haskell2010
 
-executable SchaffschNie-Prof
-  main-is:             Main.hs
-  ghc-options:
-    -O2
-    -threaded
-    -fprof-auto
-    "-with-rtsopts=-N -p -s -hy -i0.1"
-  other-extensions:    Arrows
-  build-depends:       base >=4.6 && <5.0
-                       , data-default >=0.5
-                       , split >=0.2
-                       , sdl2 >=2.1
-                       , sdl2-ttf >=0.2
-                       , text >=1.2
-                       , StateVar >=1.1
-                       , colour >=2.3
-                       , linear >=1.20
-                       , Yampa >=0.10
-                       , containers >= 0.5
-                       , directory >= 1.2
-  hs-source-dirs:      src
-  default-language:    Haskell2010
+-- executable SchaffschNie-Prof
+--   main-is:             Main.hs
+--   ghc-options:
+--     -O2
+--     -threaded
+--     -fprof-auto
+--     "-with-rtsopts=-N -p -s -hy -i0.1"
+--   other-extensions:    Arrows
+--   build-depends:       base >=4.6 && <5.0
+--                        , data-default >=0.5
+--                        , split >=0.2
+--                        , sdl2 >=2.1
+--                        , sdl2-ttf >=0.2
+--                        , text >=1.2
+--                        , StateVar >=1.1
+--                        , colour >=2.3
+--                        , linear >=1.20
+--                        , Yampa >=0.10
+--                        , containers >= 0.5
+--                        , directory >= 1.2
+--                        , filepath >= 1.4
+--   hs-source-dirs:      src
+--   default-language:    Haskell2010
